samples/_failures_safe/1761045389_34924b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ef791a7.c: In function ‘main’:
./samples/SAFE/__tmp_5ef791a7.c:148:25: error: expected ‘)’ at end of input
  148 |         free(heap_points
      |             ~           ^
      |                         )
./samples/SAFE/__tmp_5ef791a7.c:148:9: error: expected declaration or statement at end of input
  148 |         free(heap_points
      |         ^~~~
./samples/SAFE/__tmp_5ef791a7.c:148:9: error: expected declaration or statement at end of input
